--- a/card.css
+++ b/card.css
@@ -3,7 +3,7 @@ body
     margin:0;
     padding: 0;
     min-height: 100vh;
-    background: #333;
+    background: #a78fbd;
     display: flex;
     justify-content: center;
     align-items: center;
